istio-resources/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: express-test-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - express-test-gateway
  http:
  - match:
    - uri:
        prefix: /test
    route:
    - destination:
        host: express-test
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
